service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sh4ytan-service
spec:
  selector:
    app: httpbin-sh4ytan
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
