ingress.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: sh4ytan-ingress
spec:
  virtualhost:
    fqdn: httpbin-sh4ytan.sandbox.cedille.club
    tls:
      secretName: tls-delegation/sandbox-tls
  routes:
    - conditions:
        - prefix: /
      services:
        - name: sh4ytan-service
          port: 80
      timeoutPolicy:
        idle: 600s
        response: 600s
